--- a/AuthService-dev.properties
+++ b/AuthService-dev.properties
@@ -32,7 +32,7 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 # zipkin tracing
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/zipkin/
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 #Redis
 spring.data.redis.host=redis
