--- a/AuthService-dev.properties
+++ b/AuthService-dev.properties
@@ -3,7 +3,7 @@ server.port=9002
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
 # Database configuration
-spring.r2dbc.url=r2dbc:mariadb://host.docker.internal:3306/authentication?createDatabaseIfNotExist=true
+spring.r2dbc.url=r2dbc:mariadb://192.168.1.32:3306/authentication?createDatabaseIfNotExist=true
 spring.r2dbc.username=root
 spring.r2dbc.password=0986045812a
 
