--- a/AuthService-prod.properties
+++ b/AuthService-prod.properties
@@ -1,14 +1,14 @@
 # Server
 server.port=9002
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.client.service-url.defaultZone= http://${DISCOVERY_HOST_IP}:${DISCOVERY_PORT}/eureka
 
 # Database configuration
-spring.r2dbc.url=r2dbc:mariadb://localhost:3306/authentication?createDatabaseIfNotExist=true
+spring.r2dbc.url=r2dbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.r2dbc.username=root
 spring.r2dbc.password=0986045812a
 
 # Config Kafka
-spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.retries=3
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
@@ -23,7 +23,7 @@ spring.r2dbc.pool.max-size=20
 
 #Config Liquibase
 # ???ng d?n ??n file changelog c?a Liquibase
-spring.liquibase.url=jdbc:mariadb://localhost:3306/authentication?createDatabaseIfNotExist=true
+spring.liquibase.url=jdbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.liquibase.enabled=true
 spring.liquibase.user=root
 spring.liquibase.password=0986045812a
@@ -32,7 +32,7 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 # zipkin tracing
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://${ZIPKIN_HOST}:${ZIPKIN_PORT}/api/v2/spans
 
 #Redis
 spring.data.redis.host=redis
