--- a/AuthService-prod.properties
+++ b/AuthService-prod.properties
@@ -4,8 +4,8 @@ eureka.client.service-url.defaultZone= http://${DISCOVERY_HOST_IP}:${DISCOVERY_P
 
 # Database configuration
 spring.r2dbc.url=r2dbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
-spring.r2dbc.username=root
-spring.r2dbc.password=0986045812a
+spring.r2dbc.username=${MARIADB_USER}
+spring.r2dbc.password=${MARIADB_PASSWORD}
 
 # Config Kafka
 spring.kafka.bootstrap-servers=kafka:9092
