--- a/ApiGateway-dev.properties
+++ b/ApiGateway-dev.properties
@@ -42,6 +42,7 @@ spring.cloud.gateway.routes[3].filters[1]=StripPrefix=2
 #RecommendationService
 spring.cloud.gateway.routes[4].id=recommendation-service
 spring.cloud.gateway.routes[4].uri=lb://RecommendationService
+spring.cloud.gateway.routes[4].predicates[0]=Path=${app.prefix}/recommendation/**
 spring.cloud.gateway.routes[4].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[4].filters[1]=StripPrefix=2
 
