--- a/ApiGateway-dev.properties
+++ b/ApiGateway-dev.properties
@@ -15,7 +15,7 @@ spring.cloud.gateway.routes[0].filters[1]=StripPrefix=2
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=lb://UserService
 spring.cloud.gateway.routes[1].predicates[0]=Path=${app.prefix}/customers/**
-spring.cloud.gateway.routes[1].predicates[1]=Path=${app.prefix}/admins/**
+#spring.cloud.gateway.routes[1].predicates[1]=Path=${app.prefix}/admins/**
 spring.cloud.gateway.routes[1].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[1].filters[1]=StripPrefix=2
 
