--- a/ApiGateway-prod.properties
+++ b/ApiGateway-prod.properties
@@ -12,46 +12,92 @@ spring.cloud.gateway.routes[0].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[0].filters[1]=StripPrefix=2
 
 #UserService
-spring.cloud.gateway.routes[1].id=user-service
+# Route cho CustomerController
+spring.cloud.gateway.routes[1].id=user-service-customers
 spring.cloud.gateway.routes[1].uri=lb://UserService
 spring.cloud.gateway.routes[1].predicates[0]=Path=${app.prefix}/customers/**
-spring.cloud.gateway.routes[1].predicates[1]=Path=${app.prefix}/admins/**
 spring.cloud.gateway.routes[1].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[1].filters[1]=StripPrefix=2
 
-#TourService
-spring.cloud.gateway.routes[2].id=tour-service
-spring.cloud.gateway.routes[2].uri=lb://TourService
-spring.cloud.gateway.routes[2].predicates[0]=Path=${app.prefix}/tours/**
-spring.cloud.gateway.routes[2].predicates[1]=Path=${app.prefix}/service-tour/**
-spring.cloud.gateway.routes[2].predicates[2]=Path=${app.prefix}/itineraries/**
-spring.cloud.gateway.routes[2].predicates[3]=Path=${app.prefix}/reviews/**
-spring.cloud.gateway.routes[2].predicates[4]=Path=${app.prefix}//tour-notes/**
+# Route cho AdminController
+spring.cloud.gateway.routes[2].id=user-service-admins
+spring.cloud.gateway.routes[2].uri=lb://UserService
+spring.cloud.gateway.routes[2].predicates[0]=Path=${app.prefix}/admins/**
 spring.cloud.gateway.routes[2].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[2].filters[1]=StripPrefix=2
 
-#PaymentService
-spring.cloud.gateway.routes[3].id=payment-service
-spring.cloud.gateway.routes[3].uri=lb://PaymentService
-spring.cloud.gateway.routes[3].predicates[0]=Path=${app.prefix}/payments/**
-spring.cloud.gateway.routes[3].predicates[1]=Path=${app.prefix}/booking/**
+#TourService
+# Route cho TourController
+spring.cloud.gateway.routes[3].id=tour-service-tours
+spring.cloud.gateway.routes[3].uri=lb://TourService
+spring.cloud.gateway.routes[3].predicates[0]=Path=${app.prefix}/tours/**
 spring.cloud.gateway.routes[3].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[3].filters[1]=StripPrefix=2
 
-
-#RecommendationService
-spring.cloud.gateway.routes[4].id=recommendation-service
-spring.cloud.gateway.routes[4].uri=lb://RecommendationService
-spring.cloud.gateway.routes[4].predicates[0]=Path=${app.prefix}/recommendation/**
+# Route cho ServiceTourController
+spring.cloud.gateway.routes[4].id=tour-service-service-tour
+spring.cloud.gateway.routes[4].uri=lb://TourService
+spring.cloud.gateway.routes[4].predicates[0]=Path=${app.prefix}/service-tour/**
 spring.cloud.gateway.routes[4].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[4].filters[1]=StripPrefix=2
 
-#NotificationService
-spring.cloud.gateway.routes[5].id=notification-service
-spring.cloud.gateway.routes[5].uri=lb://NotificationService
-spring.cloud.gateway.routes[5].predicates[0]=Path=${app.prefix}/notification/**
+# Route cho ItinerariesController
+spring.cloud.gateway.routes[5].id=tour-service-itineraries
+spring.cloud.gateway.routes[5].uri=lb://TourService
+spring.cloud.gateway.routes[5].predicates[0]=Path=${app.prefix}/itineraries/**
 spring.cloud.gateway.routes[5].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[5].filters[1]=StripPrefix=2
+
+# Route cho ReviewsController
+spring.cloud.gateway.routes[6].id=tour-service-reviews
+spring.cloud.gateway.routes[6].uri=lb://TourService
+spring.cloud.gateway.routes[6].predicates[0]=Path=${app.prefix}/reviews/**
+spring.cloud.gateway.routes[6].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[6].filters[1]=StripPrefix=2
+
+# Route cho TourNotesController
+spring.cloud.gateway.routes[7].id=tour-service-tour-notes
+spring.cloud.gateway.routes[7].uri=lb://TourService
+spring.cloud.gateway.routes[7].predicates[0]=Path=${app.prefix}/tour-notes/**
+spring.cloud.gateway.routes[7].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[7].filters[1]=StripPrefix=2
+
+
+#PaymentService
+# Route cho PaymentsController
+spring.cloud.gateway.routes[8].id=payment-service-payments
+spring.cloud.gateway.routes[8].uri=lb://PaymentService
+spring.cloud.gateway.routes[8].predicates[0]=Path=${app.prefix}/payments/**
+spring.cloud.gateway.routes[8].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[8].filters[1]=StripPrefix=2
+
+# Route cho BookingController
+spring.cloud.gateway.routes[9].id=payment-service-booking
+spring.cloud.gateway.routes[9].uri=lb://PaymentService
+spring.cloud.gateway.routes[9].predicates[0]=Path=${app.prefix}/booking/**
+spring.cloud.gateway.routes[9].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[9].filters[1]=StripPrefix=2
+
+
+
+#RecommendationService
+# Route cho RecommendationController
+spring.cloud.gateway.routes[10].id=recommendation-service
+spring.cloud.gateway.routes[10].uri=lb://RecommendationService
+spring.cloud.gateway.routes[10].predicates[0]=Path=${app.prefix}/recommendation/**
+spring.cloud.gateway.routes[10].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[10].filters[1]=StripPrefix=2
+
+
+#NotificationService
+# Route cho NotificationController
+spring.cloud.gateway.routes[11].id=notification-service
+spring.cloud.gateway.routes[11].uri=lb://NotificationService
+spring.cloud.gateway.routes[11].predicates[0]=Path=${app.prefix}/notification/**
+spring.cloud.gateway.routes[11].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[11].filters[1]=StripPrefix=2
+
+
 
 # default filter
 # global cors
