--- a/ApiGateway-dev.properties
+++ b/ApiGateway-dev.properties
@@ -20,11 +20,11 @@ spring.cloud.gateway.routes[1].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[1].filters[1]=StripPrefix=2
 
 # Route cho AdminController
-spring.cloud.gateway.routes[2].id=user-service-admins
-spring.cloud.gateway.routes[2].uri=lb://UserService
-spring.cloud.gateway.routes[2].predicates[0]=Path=${app.prefix}/admins/**
-spring.cloud.gateway.routes[2].filters[0]=AuthenticateFilter
-spring.cloud.gateway.routes[2].filters[1]=StripPrefix=2
+#spring.cloud.gateway.routes[2].id=user-service-admins
+#spring.cloud.gateway.routes[2].uri=lb://UserService
+#spring.cloud.gateway.routes[2].predicates[0]=Path=${app.prefix}/admins/**
+#spring.cloud.gateway.routes[2].filters[0]=AuthenticateFilter
+#spring.cloud.gateway.routes[2].filters[1]=StripPrefix=2
 
 #TourService
 # Route cho TourController
