--- a/AuthService-dev.properties
+++ b/AuthService-dev.properties
@@ -1,6 +1,9 @@
 # Server
 server.port=9002
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # Database configuration
 spring.r2dbc.url=r2dbc:mariadb://localhost:3306/authentication?createDatabaseIfNotExist=true
