--- a/AuthService-prod.properties
+++ b/AuthService-prod.properties
@@ -1,6 +1,9 @@
 # Server
 server.port=9002
 eureka.client.service-url.defaultZone=http://${DISCOVERY_HOST_IP}:${DISCOVERY_PORT}/eureka
+eureka.instance.preferIpAddress=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # Database configuration
 spring.r2dbc.url=r2dbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
