--- a/TourService-dev.properties
+++ b/TourService-dev.properties
@@ -40,6 +40,6 @@ management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 #Redis
-spring.data.redis.host=redis
-spring.data.redis.port=6379
-spring.data.redis.password=123456
+#spring.data.redis.host=redis
+#spring.data.redis.port=6379
+#spring.data.redis.password=123456
