--- a/TourService-dev.properties
+++ b/TourService-dev.properties
@@ -19,6 +19,7 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.batch-size=16384
 spring.kafka.consumer.group-id=tourService1-groupId
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.retry.topic.enabled=true
 logging.level.org.springframework=DEBUG
 
