--- a/TourService-prod.properties
+++ b/TourService-prod.properties
@@ -19,6 +19,7 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.batch-size=16384
 spring.kafka.consumer.group-id=tourService1-groupId
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.retry.topic.enabled=true
 logging.level.org.springframework=DEBUG
 
@@ -40,6 +41,6 @@ management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://${ZIPKIN_HOST}:${ZIPKIN_PORT}/api/v2/spans
 
 #Redis
-spring.data.redis.host=redis
+spring.data.redis.host=redis-container
 spring.data.redis.port=6379
 spring.data.redis.password=123456
