--- a/UserService-dev.properties
+++ b/UserService-dev.properties
@@ -13,6 +13,7 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.consumer.group-id=userService1-groupId
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.retry.topic.enabled=true
 logging.level.org.springframework=DEBUG
 
