--- a/AuthService-prod.properties
+++ b/AuthService-prod.properties
@@ -29,8 +29,8 @@ spring.r2dbc.pool.max-size=20
 # ???ng d?n ??n file changelog c?a Liquibase
 spring.liquibase.url=jdbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.liquibase.enabled=true
-spring.liquibase.user=root
-spring.liquibase.password=0986045812a
+spring.liquibase.user=${MARIADB_USER}
+spring.liquibase.password=${MARIADB_PASSWOR
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
