--- a/AuthService-prod.properties
+++ b/AuthService-prod.properties
@@ -30,7 +30,7 @@ spring.r2dbc.pool.max-size=20
 spring.liquibase.url=jdbc:mariadb://${MARIADB_HOST_IP}:${MARIADB_PORT}/${MARIADB_DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.liquibase.enabled=true
 spring.liquibase.user=${MARIADB_USER}
-spring.liquibase.password=${MARIADB_PASSWOR
+spring.liquibase.password=${MARIADB_PASSWORD}
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
