--- a/ApiGateway-prod.properties
+++ b/ApiGateway-prod.properties
@@ -97,7 +97,12 @@ spring.cloud.gateway.routes[11].predicates[0]=Path=${app.prefix}/notification/**
 spring.cloud.gateway.routes[11].filters[0]=AuthenticateFilter
 spring.cloud.gateway.routes[11].filters[1]=StripPrefix=2
 
-
+# Route cho TourTicketController
+spring.cloud.gateway.routes[12].id=tour-service-tour-ticket
+spring.cloud.gateway.routes[12].uri=lb://TourService
+spring.cloud.gateway.routes[12].predicates[0]=Path=${app.prefix}/tour-tickets/**
+spring.cloud.gateway.routes[12].filters[0]=AuthenticateFilter
+spring.cloud.gateway.routes[12].filters[1]=StripPrefix=2
 
 # default filter
 # global cors
