--- a/ApiGateway-prod.properties
+++ b/ApiGateway-prod.properties
@@ -1,5 +1,5 @@
 server.port=8000
-eureka.client.service-url.defaultZone=http://https://discoveryservice-travel.onrender.com//eureka
+eureka.client.service-url.defaultZone=http://https://discoveryservice-travel.onrender.com/eureka
 app.prefix =/api/v1
 
 # config router service
