--- a/ApiGateway-prod.properties
+++ b/ApiGateway-prod.properties
@@ -1,6 +1,5 @@
 server.port=8000
-eureka.client.service-url.defaultZone=https://discoveryservice-travel.onrender.com/eureka
-app.prefix =/api/v1
+eureka.client.service-url.defaultZone=http://${DISCOVERY_HOST_IP}:${DISCOVERY_PORT}/eureka
 
 # config router service
 #AuthService
@@ -114,4 +113,4 @@ spring.cloud.gateway.globalcors.cors-configurations[/api/v1/**].maxAge=3600
 
 # zipkin tracing
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=https://zipkin-gmtq.onrender.com
+management.zipkin.tracing.endpoint=http://${ZIPKIN_HOST}:${ZIPKIN_PORT}/api/v2/spans
