--- a/ApiGateway-prod.properties
+++ b/ApiGateway-prod.properties
@@ -1,6 +1,6 @@
 server.port=8000
 eureka.client.service-url.defaultZone=http://${DISCOVERY_HOST_IP}:${DISCOVERY_PORT}/eureka
-
+app.prefix = /api/v1
 # config router service
 #AuthService
 spring.cloud.gateway.discovery.locator.enabled=true
